fix sidebar opening on small screen

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -297,6 +297,7 @@
     left 150ms 0ms ease;
 }
 
+.observablehq-sidebar-on ~ #observablehq-sidebar,
 #observablehq-sidebar-toggle:checked ~ #observablehq-sidebar {
   left: 0;
   visibility: initial;
@@ -316,6 +317,7 @@
   z-index: 2;
 }
 
+.observablehq-sidebar-on ~ #observablehq-sidebar-backdrop,
 #observablehq-sidebar-toggle:checked ~ #observablehq-sidebar-backdrop {
   display: initial;
 }
